# MonoNav

./: .bashrc  .emacs  LatexTutorial  Learnings.txt  Makefile  README  Summer Research Plan.odt  SummerResearchPlan.txt  Thoughts.txt  codeGuide.txt  learnings.txt  lux2014tetramedian.bib  lux2014tetramedian.tex  summerResearchPlan.txt
Articles/: Articles  Downloads  Summer2014.bib
Code/Algorithms/: compareAlgVid.cc  sparseRegion.cc
Code/BlobDetection/: CMakeLists.txt  blobFinder  blobFinder.cc  cvBlobFinder  cvBlobFinder.cc  objectManagement.cc  oldFunctions.cc  singleAccelBlobFinder  singleAccelTetraMedian.cc  testBlobFinder  tetraMedian.cc
Code/EdgeDetection/: CMakeLists.txt  Derriv.cc  ImageTree.cc  derrivativeTree.cc  edgeFinderPic.cc  edgeFinderVid.cc  testImageTree.cc
Code/FirstTrials/: SURF.cc  cornerHarrisVid.cc  lkdemo.cpp  myfback.cc
Code/Tracking/: Link.h  List.h
Computationally Limited Monographic SLAM/: AllWork  CL_MSLAM.bib  IntroToResearch.pptx  SS2014MonographicSLAM.doc  SS_CoverSheet.doc  SS_FacultyApp.doc  SS_StudentApp.doc
Latex/: Makefile  example.bib  example.tex
OpenCV/: CMakeCache.txt  CMakeLists.txt  Farneback.cc  LucasKanade.cc  Makefile  SIFT.cc  SURF.cc  bgfg_gmg.cpp  cmake_install.cmake  compareAlgVid.cc  cornerHarrisDemo  cornerHarrisVid  cornerHarrisVid.cc  displayVideo  displayVideo.cc  firstProgram  firstProgram.cc  lucasKanadeExp.cc  lucasKanadeVid.cc  matTest  matTest.cc  mylkDemo.cc  opticalFlowVid.cc  siftFeatureDetector  siftFeatureDetector.cc  siftFeatureDetectorVideo.cc  sobelDerrivVid  sobelDerrivVid.cc  sparseRegion.cc  sparseRegionFback.cc  surfFeatureDetector  surfFeatureDetector.cc  surfFeatureDetectorVideo  test1.avi  testFeatureDetectImg  testFeatureDetectImg.cc
OpenCV/Algorithms/: lucasKanade.cc  sift.cc
OpenCV/BlobDetection/: CMakeLists.txt  oldFunctions.cc  testBlobFinder  testBlobFinder.cc  tetraMedian.cc
OpenCV/FirstTrials/: CMakeLists.txt  LucasKanade.cc  cornerHarrisDemo.cc  sparseRegionFback.cc
OpenCV/Tracking/: CMakeLists.txt  Derriv.cc  blobTutorial  blobTutorial.cc  derrivativeTree  edgeFinderPic  edgeFinderPic.cc  edgeFinderPicAuto  edgeFinderPicAuto.cc  edgeFinderVid  edgeFinderVid.cc  oldFunctions.cc  testBlobFinder  testBlobFinder.cc  testDerrivative  testDerrivative.cc  testImageTree  testSmartDerrivative  testSmartDerrivative.cc  tetraMedian.cc
OpenCV/boundingRegion/: CMakeCache.txt  CMakeLists.txt  Derriv.cc  Link.h  Makefile  Sparse.cc  cmake_install.cmake  edgeVectorPic.cc  edgeVectorVid.cc  functions.cc  sobelDerrivVid.cc
OpenCV/oldTrials/: CMakeCache.txt  Farneback.cc  Makefile  Sobel.cc  cmake_install.cmake  compareAlgVid.cc  siftFeatureDetectorVideo.cc  sparseRegionImg.cc  sparseRegionVid.cc  surfFeatureDetector.cc  surfFeatureDetectorVideo.cc
SVN/.svn/: all-wcprops  entries
SVN/Cs120/.svn/: all-wcprops  entries
SVN/Cs120/activities/: activity_26_projectile.py  age_in_seconds.py  ageinseconds.py  circle.py  function1.py  grades_number_to_letter.py  output_test_file.txt  panda.py  plot_sin.py  ppmimage_program.py  prettypicture.ppm  test_file_with_text.txt  testing_for_test.py  wolf.py
SVN/Cs120/assignments/: calculating_pi.py  chuck_norris_push-up.py  random_dot.py  sinbad_meets_ariel.py
SVN/Cs120/hw/: blur.py  intercepting_projectiles.py  python.ppm  quiztester.py  sinbad_meets_ariel.py  turtle_star.py
SVN/Cs170/: Research.bib  ResearchProposal.aux  ResearchProposal.bbl  ResearchProposal.txt  drracket  dturtle.py  wall.py
SVN/Cs170/.svn/: all-wcprops  entries
SVN/Cs170/Robots/: line_configure.py  mapping_simulation.py  point_list.py
SVN/Cs170/in_class_assignments_oh_yeah/: beziere.py  binary_search_tree.py  bubble_sort.py  create_binary_tree.py  factorial.py  hello.py  linked_list.py  queue_linked_list.py  quick_sort.py  search.py  search_complexity.txt  stack_python_list.py
SVN/Cs170/pygame/: test.py
SVN/Cs250/.svn/: all-wcprops  entries
SVN/Cs250/inclass/: knuthMorrisPratt.cc  test.cc
SVN/books/.svn/: all-wcprops  entries
SVN/computerSecurity/.svn/: all-wcprops  entries
SVN/computerSecurity/finalTest/: prob7parta.cc
SVN/computerSecurity/progPractice/: excel-lent.py
SVN/cs290/.svn/: all-wcprops  entries
SVN/cs290/LC2200/: CPU.h  Choice.cc  LoopNode.h  Memory.h  PLAN  PageTableEntry.h  README  constants.h  testPTE.cc  utilities.h
SVN/cs290/assembler/: assemble.h  numToBin.cc  registers.txt  syntaxCheck.h  testCases.txt
SVN/fun/.svn/: all-wcprops  entries
SVN/fun/BlobwarsTanks/: ai.py  attack_tank.py  blobwars2.py  line_solver.py  listmath.py
SVN/fun/MandelbrotViewer/: mandelbrot.h  testMan.cc  viewing_window.py
SVN/fun/blobwars/: animation.py  blackhole.py  blobbomber.py  blobwars.py  bullet.py  enemyspawn.py  mothership.py
SVN/fun/blobwars pics/: BlobFriend15.tif
SVN/fun/chat_bot/: big_dictionary.pkl
SVN/fun/inspireMePy/: imButtons.py  inspireMeTk.py  inspire_me.py
SVN/fun/learning_tk/: Makefile  tkHelloWorld.cc
SVN/fun/primeNumbers/: primeFinder  primeFinder.cc
SVN/fun/space_invaders/: defender.py  invader.py  missile.py
SVN/fun/survive_the_hive/: survive_the_hive_heirarchy.odt  window.py
SVN/fun/tkinter_practice/: depth_map.ppm  grid.py  scrolling_noise.py  sonar_range.py
SVN/im/: TestConnectOut.matrix
SVN/im/.svn/: all-wcprops  entries
SVN/progPractice/: anOddSum.py  oilSpill.py  piAthlon.py
SVN/progPractice/.svn/: all-wcprops  entries
SVN/progPractice/MercerSpring2013/: prob1.in  prob12.py  prob13.py  prob7.in  prob7.py  prob8.py
SVN/research/.svn/: all-wcprops  entries
SVN/util/.svn/: all-wcprops  entries
SVN/util/Game/: Blocks.cc  Clone.h  Light.h  Makefile  Material.cc  Material.h  Parse.cc  PlayerClone.h  README  Shaders.h  Vertex.cc  Vertex.h  colors.mtl  test.cc  test.frag  viewGL.cc  viewGL.h  vn.frag
SVN/util/List/: testList.cc
SVN/util/Loop/: Loop.h  LoopNode.h  (+1 more)
SVN/videogameDev/: AnimationArmsBlender.txt  AnimationCrouchWalk.txt  AnimationForwardPush.txt  AnimationHooray.txt  AnimationLeftBlast.txt  AnimationLeftPunch.txt  AnimationRightGunShoot.txt
articles/: Summer2014.bib  test.txt
(+1564 files in other folders)
